# python-note

./: .gitignore  .pre-commit-config.yaml  lint.py  pyproject.toml  ruff.toml
celery-retry/: Pipfile  concurency.py  docker-compose.yaml  main.py  publisher.py  tasks.py
import_play/: main.py
import_play/sub/: a.py  b.py
import_play/sub/subsub/: c.py
performance/: complex.py  pyinstrument.html  pyinstrument.json  pyinstrument.txt
pydantic-example/: validate_class.py
pytest-container/: .dockerignore  .env  Dockerfile  configs.py  docker-compose-test.yaml  report.html  requirements.txt  run-test-compose.sh  run-test-wait.sh  run-test.sh  test_calculator.py  test_configs.py
pytest-container/allure-results/: 160ecd21-0431-40da-b869-ae28fb4431ce-result.json  353c6d0e-4b59-4523-8a75-ff45785d68ab-result.json  b7745f59-ade4-4f58-827f-5b2568072031-result.json  c0de4a68-efda-4c6e-b3fc-da773783d7b3-result.json
tools/: .zshrc
