[tool.poetry]
name = "pythopn-snippet"
version = "0.1.0"
description = ""
authors = ["Hai Nguyen <quochai.kstn@gmail.com>"]
readme = "README.md"
packages = [{include = "pythopn_snippet"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
