[tool.poetry]
name = "pythopn-snippet"
version = "0.1.0"
description = ""
authors = ["Hai Nguyen <quochai.kstn@gmail.com>"]
readme = "README.md"
packages = [{include = "pythopn_snippet"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^3.0.0"
pyinstrument = "^4.6.2"
ruff = "^0.4.6"
py-spy = "^0.3.14"
pytest = "^8.2.2"
pre-commit = "^3.7.1"
bandit = "^1.7.8"
pydantic = "2.7"
fastapi = "^0.111.0"
requests = "^2.32.3"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
